2008-01-13 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Added decorations files. Docs to follow soon(ish).
	- Fix for `star point ratio' and `star point height'
	  keys in star shape.

2008-01-11 Till Tantau <tantau@users.sourceforge.net>
	
	- Started assembling version 1.19.
	- Added copy shadow.

2008-01-10 Till Tantau <tantau@users.sourceforge.net>

	- Added random steps snake.
	
2008-01-09 Till Tantau <tantau@users.sourceforge.net>

	- Added shadow library, removed shadow shapes (no longer
	  needed).
	- Added preaction and postaction options (very useful).
	- Added transform canvas option.
	- Added scale around option.
	- Moved tikz.code.tex to tikz/tikz.code.tex
	- Moved .../libraries/pgflibrarytikzXXXX.code.tex to
	  .../frontendlayer/tikz/libraries/tikzlibraryXXXX.code.tex.

2007-12-20 Till Tantau <tantau@users.sourceforge.net>

	- Finished documentation switch from \itemoption to {key}.
	- Changed TikZ fading options. More consistent and easier to use,
	  now. 

2007-12-20 Mark Wibrow <vibrovski@users.sourceforge.net>
	- Added `ellipse split' shape.

2007-12-17 Till Tantau <tantau@users.sourceforge.net>

	- Fixed spaces problem with external graphics.
	- Added [missing] option to supress children.
	- Reduced number of libs includes by {shapes} to geometric,
	  misc and symbol. Shapes is now more or less deprecated.
	- Added shadowed shapes.
	- Added pgfsys-xetex for native xetex support.
	- Added documentation hint on scoping inside \foreach.
	- Fixed bug [1620194] "tikz library mindmap requires trees"
	- Fixed bug [1787504] "Usage of \@namelet in xxcolor.sty clases with memoir."
	- Fixed bug [1809693] "background rectangle is scaled".
	
2007-12-13 Till Tantau <tantau@users.sourceforge.net>

	- Added fadings.
	- Added functional shadings.
	- Fixed bug in double drawing with arrows.

2007-11-24 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Fix for all math functions with two arguments.
	- Fix for tikz when y-coordinate is a function within braces.