@@ -262,7 +262,7 @@ in increasing order.
   dup mul exch
   dup mul add sqrt
   30 mul
-  1 index add
+  add
   sin
   1 add 2 div  
   dup
