@@ -93,7 +93,7 @@
   \null
   
   \thispagestyle{empty}
-  \vskip2cm
+  \vskip3cm
   \vfill
   \hfil
   \begin{tikzpicture}[overlay]
@@ -155,8 +155,8 @@
 \clearpage
 }
 
-  \include{pgfmanual-en-library-shadows}
-\end{document}
+%  \include{pgfmanual-en-library-automata}
+%\end{document}
 
 
 
