@@ -7,55 +7,47 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS[v\pgfversion] $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/frontendlayer/tikz/libraries/tikzlibraryshadows.code.tex,v 1.2 2008/01/11 14:08:48 tantau Exp $
+\ProvidesFileRCS[v\pgfversion] $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/frontendlayer/tikz/libraries/tikzlibraryshadows.code.tex,v 1.3 2008/01/13 15:30:04 tantau Exp $
 
 \usetikzlibrary{fadings}
 
 
 % General options
 \tikzset{
-  /tikz/shadow/scale/.initial=1,
-  /tikz/shadow/xshift/.initial=.5ex,
-  /tikz/shadow/yshift/.initial=-.5ex,
-  /tikz/shadow/color/.initial=black!50,
-  /tikz/shadow/opacity/.initial=1,
-  /tikz/shadow/background/.style={}
+  /tikz/shadow scale/.initial=1,
+  /tikz/shadow xshift/.initial=0pt,
+  /tikz/shadow yshift/.initial=0pt,
 }
-\let\tikz@lib@shadow@bg=\pgfutil@empty
 
 % Basic shadow style
 \tikzset{
-  /tikz/general shadow/.style={
+  general shadow/.style={
     preaction={
-      /tikz/shadow/.cd,
       #1,
-      /tikz/.cd,
-      fill=\pgfkeysvalueof{/tikz/shadow/color},
-      opacity=\pgfkeysvalueof{/tikz/shadow/opacity},
       transform canvas={
-        scale around=\pgfkeysvalueof{/tikz/shadow/scale}:(current path bounding box.center),
-        shift={(\pgfkeysvalueof{/tikz/shadow/xshift},\pgfkeysvalueof{/tikz/shadow/yshift})}
+        scale around=\pgfkeysvalueof{/tikz/shadow scale}:(current path bounding box.center),
+        shift={(\pgfkeysvalueof{/tikz/shadow xshift},\pgfkeysvalueof{/tikz/shadow yshift})}
       },
-      /tikz/shadow/background
     }
   },
-  /tikz/every shadow/.style={}
+  every shadow/.style={}
 }
 
 
 
 %
-% Adds a simple general shadow to a path
+% Adds a simple drop shadow to a path
 %
 
 \tikzset{
-  /tikz/shadow/.style={
+  /tikz/drop shadow/.style={
     general shadow={%
-      scale=1,
-      xshift=.5ex,
-      yshift=-.5ex,
+      shadow scale=1,
+      shadow xshift=.5ex,
+      shadow yshift=-.5ex,
       opacity=.5,
-      /tikz/every shadow,
+      fill=black!50,
+      every shadow,
       #1
     }
   }
@@ -63,17 +55,18 @@
 
 
 %
-% Adds a circular shadow to a path
+% Adds a circular drop shadow to a path
 %
 
 \tikzset{
-  /tikz/circular shadow/.style={
+  /tikz/circular drop shadow/.style={
     general shadow={%
-      scale=1.1,
-      xshift=.3ex,
-      yshift=-.3ex,
-      /tikz/path fading={circle with fuzzy edge 15 percent},
-      /tikz/every shadow,
+      shadow scale=1.1,
+      shadow xshift=.3ex,
+      shadow yshift=-.3ex,
+      fill=black!50,
+      path fading={circle with fuzzy edge 15 percent},
+      every shadow,
       #1
     }
   }
@@ -88,11 +81,12 @@
 \tikzset{
   /tikz/circular glow/.style={
     general shadow={%
-      scale=1.25,
-      xshift=0pt,
-      yshift=0pt,
-      /tikz/path fading={circle with fuzzy edge 15 percent},
-      /tikz/every shadow,
+      shadow scale=1.25,
+      shadow xshift=0pt,
+      shadow yshift=0pt,
+      fill=black!50,
+      path fading={circle with fuzzy edge 15 percent},
+      every shadow,
       #1,
     }
   }
@@ -110,12 +104,12 @@
   /tikz/copy shadow/.style={
     general shadow={%
       /utils/exec={\let\tikz@lib@shadow@fill=\tikz@fillcolor\let\tikz@lib@shadow@draw=\tikz@strokecolor},
-      scale=1,
-      xshift=.5ex,
-      yshift=.5ex,
-      opacity=1,
-      background/.style={fill=\tikz@lib@shadow@fill,draw=\tikz@lib@shadow@draw},
-      /tikz/every shadow,
+      shadow scale=1,
+      shadow xshift=.5ex,
+      shadow yshift=.5ex,
+      fill=\tikz@lib@shadow@fill,
+      draw=\tikz@lib@shadow@draw,
+      every shadow,
       #1
     }
   }
@@ -130,25 +124,23 @@
   /tikz/double copy shadow/.style={
     general shadow={%
       /utils/exec={\let\tikz@lib@shadow@fill=\tikz@fillcolor\let\tikz@lib@shadow@draw=\tikz@strokecolor},
-      scale=1,
-      xshift=.5ex,
-      yshift=.5ex,
-      opacity=1,
-      background/.style={fill=\tikz@lib@shadow@fill,draw=\tikz@lib@shadow@draw},
-      /tikz/every shadow,
+      shadow scale=1,
+      shadow xshift=.5ex,
+      shadow yshift=.5ex,
+      fill=\tikz@lib@shadow@fill,
+      draw=\tikz@lib@shadow@draw,
       #1,
-      xshift/.expanded=2*\pgfkeysvalueof{/tikz/shadow/xshift},
-      yshift/.expanded=2*\pgfkeysvalueof{/tikz/shadow/yshift},
+      shadow xshift/.expanded=2*\pgfkeysvalueof{/tikz/shadow xshift},
+      shadow yshift/.expanded=2*\pgfkeysvalueof{/tikz/shadow yshift},
     },
     general shadow={%
       /utils/exec={\let\tikz@lib@shadow@fill=\tikz@fillcolor\let\tikz@lib@shadow@draw=\tikz@strokecolor},
-      scale=1,
-      xshift=.5ex,
-      yshift=.5ex,
-      opacity=1,
-      background/.style={fill=\tikz@lib@shadow@fill,draw=\tikz@lib@shadow@draw},
-      /tikz/every shadow,
-      #1
+      shadow scale=1,
+      shadow xshift=.5ex,
+      shadow yshift=.5ex,
+      fill=\tikz@lib@shadow@fill,
+      draw=\tikz@lib@shadow@draw,
+      #1,
     },
   }
 }
