@@ -7,11 +7,11 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgf.cfg,v 1.5 2007/12/17 14:52:31 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgf.cfg,v 1.6 2008/01/13 15:30:04 tantau Exp $
 
 % Default driver:
 \ifx\pgfsysdriver\@undefined
-  \def\pgfsysdriver{pgfsys-\Gin@driver}
+  \edef\pgfsysdriver{pgfsys-\Gin@driver}
 \fi
 
 
