@@ -1,3 +1,7 @@
+2008-01-13 Till tantau <tantau@users.sourceforge.net>
+
+	- Changed shadow lib once more and added it to CVS.
+
 2008-01-13 Mark Wibrow <vibrovski@users.sourceforge.net>
 
 	- Added decorations files. Docs to follow soon(ish).
@@ -6,7 +10,6 @@
 
 2008-01-11 Till Tantau <tantau@users.sourceforge.net>
 	
-	- Started assembling version 1.19.
 	- Added copy shadow.
 
 2008-01-10 Till Tantau <tantau@users.sourceforge.net>
@@ -26,6 +29,8 @@
 
 2007-12-20 Till Tantau <tantau@users.sourceforge.net>
 
+	- Fixed missing example bbs for dvipdfm.
+	- Fixed buggy swirl shading.
 	- Finished documentation switch from \itemoption to {key}.
 	- Changed TikZ fading options. More consistent and easier to use,
 	  now. 
